add spa sources to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ build/
 # spa_c_files builds
 pvlib/spa_c_files/build*
 
+# spa_c_files source
+pvlib/spa_c_files/spa.c
+pvlib/spa_c_files/spa.h
+pvlib/spa_c_files/spa_tester.c
+
 # generated documentation
 # pvlib/sphinx/Docs/build/
 
