--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
     - PD_VERSION=0.13.1
     - PD_VERSION="0.14.*"
     - PD_VERSION="0.15.*"
+    - PD_VERSION="0.16.*"
 
 # setup miniconda for numpy, scipy, pandas
 before_install:
