--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ coverage.xml
 #Ignore some notebooks
 *.ipynb
 !docs/tutorials/*.ipynb
+/pvlib/*.csv
+/pvlib/pvlibdev.sublime-workspace
+/pvlib/pvlibdev.sublime-project
+/pvlib/varlists.pkl
