--- a/ci/requirements-py34.yml
+++ b/ci/requirements-py34.yml
@@ -1,10 +1,13 @@
 name: test_env
+channels:
+    - defaults
+    - http://conda.anaconda.org/Unidata
 dependencies:
     - python=3.4
     - nose
     - pytz
     - ephem
-    - netcdf4
+    - siphon
     #- numba
     - pip:
         - numpy
