--- a/ci/requirements-py27-min.yml
+++ b/ci/requirements-py27-min.yml
@@ -1,4 +1,7 @@
 name: test_env
+channels:
+    - defaults
+    - http://conda.anaconda.org/Unidata
 dependencies:
     - python=2.7 
     - numpy==1.8.2
@@ -7,6 +10,6 @@ dependencies:
     - nose
     - pytz
     - ephem
-    - netcdf4
+    - siphon
     - pip:
         - coveralls
