avoid the conda/travis/pip/scipy mess with a simple skip

--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -1,11 +1,12 @@
 name: test_env
 dependencies:
     - python=3.5
+    - numpy
+    - scipy
+    - pandas
     - nose
     - pytz
     - ephem
-#    - numba
+    - numba
     - pip:
-        - numpy
-        - pandas
         - coveralls
