--- a/ci/requirements-py34.yml
+++ b/ci/requirements-py34.yml
@@ -1,11 +1,12 @@
 name: test_env
 dependencies:
     - python=3.4
+    - numpy
+    - scipy
+    - pandas
     - nose
     - pytz
     - ephem
-    #- numba
+    - numba
     - pip:
-        - numpy
-        - pandas
         - coveralls
