--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ install:
     - echo $PATH
     - ls -l /home/travis/miniconda/envs/test_env/lib
     #- pip install . # use pip to automatically install anything not in the yml files (i.e. numpy/scipy/pandas for py3*)
-    - pip install scipy # won't do anything if already installed
+    #- pip install scipy # won't do anything if already installed
     - python setup.py install
 
 script:
