--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,13 @@
 # CI on Windows via appveyor
-# This file was based on xarray's appveyor.yml
+# This file was based on pandas' and xarray's appveyor.yml
 # This file was based on Olivier Grisel's python-appveyor-demo
 
 environment:
+  global:
+    # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
+    # /E:ON and /V:ON options are not enabled in the batch script intepreter
+    # See: http://stackoverflow.com/a/13751649/163740
+    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor\\run_with_env.cmd"
 
   matrix:
     - PYTHON: "C:\\Python27-conda32"
@@ -33,4 +38,4 @@ install:
 build: false
 
 test_script:
-    - nosetests -v --with-coverage --cover-package=pvlib pvlib
+    - "nosetests -v --with-coverage --cover-package=pvlib pvlib"
