--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
     - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
 
     # install xray and depenencies
-    - "conda install --yes --quiet pip numpy scipy pandas nose pytz ephem numba"
+    - "conda install --yes --quiet pip numpy scipy pandas nose pytz ephem numba siphon"
     - "python setup.py install"
 
 build: false
