pin to ipython 4.0.1

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -7,7 +7,7 @@ dependencies:
     - pytz
     - ephem
     - numba
-    - ipython
+    - ipython=4.0.1
     - sphinx
     - numpydoc
     - matplotlib
