--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,16 +1,16 @@
 name: pvlib
 channels:
     - defaults
-    - http://conda.anaconda.org/Unidata
+    - http://conda.anaconda.org/unidata
 dependencies:
-    - python=2.7 
+    - python=2.7
     - numpy
     - scipy
     - pandas
     - pytz
     - ephem
     - numba
-    - ipython
+    - ipython=4.0.1
     - sphinx
     - numpydoc
     - matplotlib
