--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -1,7 +1,7 @@
 name: test_env
 channels:
     - defaults
-    - http://conda.anaconda.org/Unidata
+    - http://conda.anaconda.org/conda-forge
 dependencies:
     - python=3.5
     - numpy
@@ -11,5 +11,6 @@ dependencies:
     - pytz
     - ephem
     - numba
+    - siphon
     - pip:
         - coveralls
