--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,8 @@ install:
     - "python --version"
     - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
 
-    # install xray and depenencies
+    # install dependencies, then pvlib
+    - "conda config --add channels http://conda.anaconda.org/conda-forge"
     - "conda install --yes --quiet pip numpy scipy pandas nose pytz ephem numba siphon"
     - "python setup.py install"
 
