scipy back to 0.16, python back to 3.4

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,8 +14,8 @@ environment:
       PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python35-conda64"
-      PYTHON_VERSION: "3.5"
+    - PYTHON: "C:\\Python34-conda64"
+      PYTHON_VERSION: "3.4"
       PYTHON_ARCH: "64"
 
 install:
@@ -32,7 +32,7 @@ install:
     - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
 
     # install depenencies
-    - "conda install --yes --quiet pip numpy scipy pandas nose pytz ephem numba"
+    - "conda install --yes --quiet pip numpy scipy=0.16.0 pandas nose pytz ephem numba"
 
     # install pvlib
     - "python setup.py install"
