--- a/ci/requirements-py27-min.yml
+++ b/ci/requirements-py27-min.yml
@@ -1,9 +1,10 @@
 name: test_env
 dependencies:
-    - python=2.7 
+    - python=2.7
     - numpy==1.8.2
     - pandas==0.13.1
-    - nose
     - pytz
+    - pytest
+    - pytest-cov
     - pip:
         - coveralls
