--- a/ci/requirements-py27.yml
+++ b/ci/requirements-py27.yml
@@ -1,12 +1,14 @@
 name: test_env
 dependencies:
-    - python=2.7 
+    - python=2.7
     - numpy
     - scipy
     - pandas
-    - nose
     - pytz
     - ephem
     - numba
+    - pytest
+    - pytest-cov
+    - nose
     - pip:
         - coveralls
