--- a/ci/requirements-py34.yml
+++ b/ci/requirements-py34.yml
@@ -4,9 +4,11 @@ dependencies:
     - numpy
     - scipy
     - pandas
-    - nose
     - pytz
     - ephem
     - numba
+    - pytest
+    - pytest-cov
+    - nose
     - pip:
         - coveralls
