--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ install:
     # Prepend newly installed Python to the PATH of this build (this cannot be
     # done from inside the powershell script as it would require to restart
     # the parent CMD process).
-    - "SET ""PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"""
+    - "SET \"\"PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%\"\""
 
     # Check that we have the expected version and architecture for Python
     - "python --version"
