--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,6 +1,7 @@
-name: pvlib
+name: pvlibdocs
 dependencies:
     - python=2.7
+    - mock  # needed for local python 2.7 builds
     - numpy
     - scipy
     - pandas
@@ -8,7 +9,10 @@ dependencies:
     - ephem
     - numba
     - ipython=4.0.1
-    - sphinx
+    - ipywidgets
     - numpydoc
     - matplotlib
     - seaborn
+    - sphinx=1.3.5  # same versions as rtd
+    - sphinx_rtd_theme=0.1.7
+    - docutils=0.12
