--- a/ci/requirements-py27-min.yml
+++ b/ci/requirements-py27-min.yml
@@ -1,8 +1,8 @@
 name: test_env
 dependencies:
     - python=2.7
-    - numpy==1.8.2
-    - pandas==0.13.1
+    - numpy=1.9.0
+    - pandas=0.14.0
     - pytz
     - pytest
     - pytest-cov
