--- a/ci/requirements-py27-min.yml
+++ b/ci/requirements-py27-min.yml
@@ -1,11 +1,11 @@
 name: test_env
 dependencies:
     - python=2.7
-    - numpy=1.9.0
-    - pandas=0.14.1
     - pytz
     - pytest
     - pytest-cov
     - nose
     - pip:
         - coveralls
+        - numpy==1.9.0
+        - pandas==0.13.1
