make pip install order explicit

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,10 @@ install:
     - echo "install"
     - conda env create --file ci/requirements-$CONDA_ENV.yml
     - source activate test_env # all envs are named test_env in the yml files
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+        pip install numpy==1.9.3;
+        pip install pandas==0.14.1;
+      fi
     - conda list
     - echo $PATH
     - ls -l /home/travis/miniconda/envs/test_env/lib
