--- a/.travis.yml
+++ b/.travis.yml
@@ -46,11 +46,13 @@ install:
     - echo "install"
     - conda env create --file ci/requirements-$CONDA_ENV.yml
     - source activate test_env # all envs are named test_env in the yml files
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+    # needed to make sure that pandas is compiled against the right
+    # version of numpy
+    - if [[ "$CONDA_ENV" == "2.7" ]]; then
         pip uninstall numpy --yes;
         pip uninstall pandas --yes;
-        pip install --no-cache-dir numpy==1.9.3;
-        pip install --no-cache-dir pandas==0.14.1;
+        pip install --no-cache-dir numpy==1.9.0;
+        pip install --no-cache-dir pandas==0.14.0;
       fi
     - conda list
     - echo $PATH
