improvements to irradiance module, increase min requirements (#214)
* refactor disc

* pep8, minimum, maximum functions

* more de-pandafication

* depandafy atmosphere

* reorder zenith filter to avoid python 2.7 complex math

* more disc refactoring

* fix dirint. needs tests

* update whatsnew

* perez now works with scalars. array input still converted to series output

* refactor perez to work with scalars and return scalars

* bump pandas/numpy reqs

* work around continuum min req conda packaging bug

* switch to pip install for min req numpy=1.9.0 and pandas==0.13.1

* add pip to travis cache

* try pandas 0.14.1

* numpy 1.9.3, pandas 0.14.1

* make pip install order explicit

* add uninstalls

* add no-cache-dir

* 1.9.0, 0.14.0

* fix conda env test

* update whatsnew

* rebase on fs spectral changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ addons:
             - ccache
 
 cache:
-    directories:
-        - $HOME/.ccache
+#    - pip
+    - ccache
 
 # setup miniconda for numpy, scipy, pandas
 before_install:
@@ -46,6 +46,14 @@ install:
     - echo "install"
     - conda env create --file ci/requirements-$CONDA_ENV.yml
     - source activate test_env # all envs are named test_env in the yml files
+    # needed to make sure that pandas is compiled against the right
+    # version of numpy
+    - if [[ "$CONDA_ENV" == "py27-min" ]]; then
+        pip uninstall numpy --yes;
+        pip uninstall pandas --yes;
+        pip install --no-cache-dir numpy==1.9.0;
+        pip install --no-cache-dir pandas==0.14.0;
+      fi
     - conda list
     - echo $PATH
     - ls -l /home/travis/miniconda/envs/test_env/lib
