--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,4 +1,7 @@
 name: pvlibdocs
+channels:
+    - conda-forge
+    - conda-forge/label/rc
 dependencies:
     - python=2.7
     - mock  # needed for local python 2.7 builds
@@ -11,7 +14,7 @@ dependencies:
     - ipython=4.0.1
     - ipywidgets
     - numpydoc
-    - matplotlib
+    - matplotlib=2.0.0*
     - seaborn
     - sphinx=1.3.5  # same versions as rtd
     - sphinx_rtd_theme=0.1.7
