--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,9 +1,6 @@
 name: pvlibdocs
-channels:
-    - conda-forge
-    - conda-forge/label/rc
 dependencies:
-    - python=2.7
+    - python=3.5
     - mock  # needed for local python 2.7 builds
     - numpy
     - scipy
@@ -14,7 +11,7 @@ dependencies:
     - ipython=4.0.1
     - ipywidgets
     - numpydoc
-    - matplotlib=2.0.0*
+    - matplotlib
     - seaborn
     - sphinx=1.3.5  # same versions as rtd
     - sphinx_rtd_theme=0.1.7
