--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -13,6 +13,6 @@ dependencies:
     - numpydoc
     - matplotlib
     - seaborn
-    - sphinx=1.3.5  # same versions as rtd
-    - sphinx_rtd_theme=0.1.7
-    - docutils=0.12
+    - sphinx  #=1.3.5  # same versions as rtd
+    - sphinx_rtd_theme  #=0.1.7
+    - docutils  #=0.12
