--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,6 +1,6 @@
 name: pvlibdocs
 dependencies:
-    - python=3.5
+    - python=2.7
     - mock  # needed for local python 2.7 builds
     - numpy
     - scipy
@@ -8,11 +8,11 @@ dependencies:
     - pytz
     - ephem
     - numba
-    - ipython  #=4.0.1
+    - ipython=4.0.1
     - ipywidgets
     - numpydoc
     - matplotlib
     - seaborn
-    - sphinx  #=1.3.5  # same versions as rtd
-    - sphinx_rtd_theme  #=0.1.7
-    - docutils  #=0.12
+    - sphinx=1.3.5  # same versions as rtd
+    - sphinx_rtd_theme=0.1.7
+    - docutils=0.12
