try a different casting approach

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,8 +3,7 @@ dependencies:
     - python=2.7
     - mock  # needed for local python 2.7 builds
     - numpy
-    - scipy=0.16.0
-    - nomkl
+    - scipy
     - pandas
     - pytz
     - ephem
