--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,7 +1,7 @@
 name: pvlibdocs
 channels:
     - defaults
-    - conda-forge
+#    - conda-forge
 dependencies:
     - python=2.7
     - mock  # needed for local python 2.7 builds
