Add a forecast module (#180)
* cloned origin/master

* removed siphon files

* Added files for running and testing siphon

* Renamed files and removed errant file

* Subclassed forecast models

* Updated forecast module: added more forecast classes.

* Added forecast module documentation.

* Updated documentation and Travis build files.

* Updated Travis build to include netcdf and siphon.

* Moved forecast_testing.py and added requirements.txt.

* updated Travis build conda requirements in /ci

* Modified forecast.py and updated testing docs.

* Updated setup.py and .travis.yml files

* Added nose tests for forecast.py

* Updated nosetests for forecast.py

* Updated .gitignore

* Created forecast_to_power.ipynb and updated forecast.py

* Updated test_forecast.py and forecast.py

* Added tests in test_forecast.py and modified forecast.py

* change model names

* fix super and test

* Updated forecast class & radiation models

* Updated forecast.py, fixes to solarposition.py, tools.py

* Fixed time zone handling of forecast.py, updated tutorials.

* Updated tutorials, radiation conversion for forecast.py

* Updated forecast.py tests

* Updated forecast, tests, and notebooks

* Updated documentation, tutorials, and forecast.py

* Updated forecast.py

* add rtd ymls

* add numpydoc to rtd conda env, remove from source

* try adding a simple plot with ipython directives

* add ipython directives to conf.py

* remove line numbers from ipython directives

* add blank line

* add imports

* remove mocks

* remove sphinxext

* add a blank line

* move ipython directive out of numpydoc

* remove plot from module

* clean up merge detritus

* add siphon to env

* remove sphinx_rtd_theme from our source

* add siphon to ci ymls

* Fixed test_temp_convert()

* Added exception for HTTPError

* Added HTTPError exception

* Updated HTTPError exception

* Updated HTTPError exception


--- a/ci/requirements-py27.yml
+++ b/ci/requirements-py27.yml
@@ -1,4 +1,7 @@
 name: test_env
+channels:
+    - defaults
+    - http://conda.anaconda.org/conda-forge
 dependencies:
     - python=2.7
     - numpy
@@ -7,6 +10,7 @@ dependencies:
     - pytz
     - ephem
     - numba
+    - siphon
     - pytest
     - pytest-cov
     - nose
