--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,7 +1,7 @@
 name: pvlibdocs
 channels:
     - defaults
-#    - conda-forge  # needed for siphon, but causes path too short problems on rtd
+    - conda-forge  # needed for siphon, but causes path too short problems on rtd
 dependencies:
     - python=2.7
     - mock  # needed for local python 2.7 builds
@@ -16,7 +16,7 @@ dependencies:
     - numpydoc
     - matplotlib
     - seaborn
-#    - siphon
+    - siphon
     - sphinx=1.3.5  # same versions as rtd
     - sphinx_rtd_theme=0.1.7
     - docutils=0.12
