--- a/ci/requirements-py36.yml
+++ b/ci/requirements-py36.yml
@@ -8,9 +8,9 @@ dependencies:
     - scipy
     - pandas
     - pytz
-    - ephem
-    - numba
-    - siphon
+    #- ephem
+    #- numba
+    #- siphon
     - pytest
     - pytest-cov
     - nose
