--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,22 +1,24 @@
 name: pvlibdocs
 channels:
+    - conda-forge
     - defaults
-#    - conda-forge  # needed for siphon, but causes path too short problems on rtd
 dependencies:
     - python=2.7
     - mock  # needed for local python 2.7 builds
-    - numpy
+    - numpy=1.11.2
     - scipy
-    - pandas
+    - pandas=0.19.1
     - pytz
     - ephem
     - numba
     - ipython=4.0.1
     - ipywidgets
     - numpydoc
-    - matplotlib
-    - seaborn
-#    - siphon
-    - sphinx=1.3.5  # same versions as rtd
-    - sphinx_rtd_theme=0.1.7
-    - docutils=0.12
+    - matplotlib=1.5.3
+    - seaborn=0.7.1
+    - siphon=0.4.0
+    - sphinx=1.4.8
+    - netCDF4=1.2.4
+    - hdf4=4.2.12
+    - sphinx_rtd_theme
+    - docutils
