improve forecast test reliability (#303)
* put conda-forge first in fx builds

* add pytest timeout

* add skip windows

* update whatsnew

--- a/ci/requirements-py34.yml
+++ b/ci/requirements-py34.yml
@@ -1,7 +1,7 @@
 name: test_env
 channels:
-    - defaults
     - conda-forge
+    - defaults
 dependencies:
     - python=3.4
     - numpy
@@ -16,3 +16,4 @@ dependencies:
     - nose
     - pip:
         - coveralls
+        - pytest-timeout
