--- a/ci/requirements-py27.yml
+++ b/ci/requirements-py27.yml
@@ -1,7 +1,7 @@
 name: test_env
 channels:
+    - conda-forge
     - defaults
-    - http://conda.anaconda.org/conda-forge
 dependencies:
     - python=2.7
     - numpy
@@ -16,3 +16,4 @@ dependencies:
     - nose
     - pip:
         - coveralls
+        - pytest-timeout
