--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 pvlib/version.py export-subst
 
 # reduce the number of merge conflicts
-docs/sphinx/source/whatsnew/v*.txt merge=union
+docs/sphinx/source/whatsnew/* merge=union
