--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -7,6 +7,7 @@ dependencies:
     - mock  # needed for local python 2.7 builds
     - numpy=1.11.2
     - scipy
+    - tables
     - pandas=0.19.1
     - pytz
     - ephem
