--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -3,23 +3,23 @@ channels:
     - conda-forge
     - defaults
 dependencies:
-    - python=3.5
+    - python=3.6
     - mock  # needed for local python 2.7 builds
-    - numpy=1.11.2
+    - numpy=1.14.2
     - scipy
-    - tables
-    - pandas=0.19.1
+    - pytables
+    - pandas=0.22.0
     - pytz
     - ephem
     - numba
-    - ipython=5.2.2
+    - ipython=6.3
     - ipywidgets
     - numpydoc
-    - matplotlib=2.0.0
-    - seaborn=0.7.1
-    - siphon=0.4.0
-    - sphinx=1.5
-    - netCDF4=1.2.5
+    - matplotlib=2.2.2
+    - seaborn=0.8.1
+    - siphon=0.7.0
+    - sphinx=1.7.2
+    - netCDF4=1.3.1
     - hdf4=4.2.12
     - sphinx_rtd_theme
     - docutils
