--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,10 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-.tox/
 .coverage
 .cache
+.pytest_cache/
+.tox/
 nosetests.xml
 coverage.xml
 
@@ -73,8 +74,7 @@ coverage.xml
 # HDF tables
 *.h5
 
-
-#Datafiles
+# Datafiles
 *.csv
 *.json
 
