minor updates to other configs

--- a/ci/requirements-py36.yml
+++ b/ci/requirements-py36.yml
@@ -9,9 +9,9 @@ dependencies:
     - pytables
     - pandas
     - pytz
-    #- ephem
-    #- numba
-    #- siphon
+    - ephem
+    - numba
+    - siphon
     - pytest
     - pytest-cov
     - pytest-mock
