--- a/ci/requirements-py37.yml
+++ b/ci/requirements-py37.yml
@@ -3,7 +3,7 @@ channels:
     - defaults
     - conda-forge
 dependencies:
-    - python=3.6
+    - python=3.7
     - numpy
     - scipy
     - pytables
@@ -11,7 +11,7 @@ dependencies:
     - pytz
     - ephem
     - numba
-    - siphon
+#    - siphon
     - pytest
     - pytest-cov
     - pytest-mock
