--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ install:
     - cmd: conda info -a
 
     # install depenencies
-    - cmd: conda create -n test_env --yes --quiet python=%PYTHON_VERSION% pip numpy scipy pytables pandas nose pytest pytz ephem numba siphon pytest-mock -c conda-forge
+    - cmd: conda create -n test_env --yes --quiet python=%PYTHON_VERSION% numpy scipy pytables pandas nose pytest pytz ephem numba siphon pytest-mock -c conda-forge
     - cmd: activate test_env
     - cmd: python --version
     - cmd: conda list
@@ -40,4 +40,4 @@ install:
 build: false
 
 test_script:
-    - cmd: py.test -v pvlib
+    - cmd: pytest -v pvlib
