--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ pvlib/spa_c_files/spa.h
 pvlib/spa_c_files/spa_tester.c
 
 # generated documentation
-# pvlib/sphinx/Docs/build/
+docs/sphinx/source/generated
+docs/sphinx/source/savefig
 
 # Installer logs
 pip-log.txt
