add all, replace complete with optional

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,5 +3,4 @@ python:
     use_system_site_packages: true
     pip_install: true
     extra_requirements:
-        - complete
-        - doc
+        - all
