ENH: ignore cython generated spa_py.c file
* git rm spa_py.c to remove it from repo
* add cython to option extra requires
* use full paths in spa_c_files for sources
* add line to bug fixes addressing #168

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ venv/
 
 # spa_c_files builds
 pvlib/spa_c_files/build*
+pvlib/spa_c_files/spa_py.c
 
 # spa_c_files source
 pvlib/spa_c_files/spa.c
