add license, docs, authors to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,23 @@
-#include *.txt
+include AUTHORS.md
+include LICENSE
+include README.md
+
 include versioneer.py
 include pvlib/_version.py
+
 recursive-include pvlib/data *
-include README.md
+
 include pvlib/spa_c_files/*.h
 
-#recursive-include docs *.txt
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *
+prune docs/tutorials
+prune docs/sphinx/build
+prune docs/sphinx/source/generated
+# all doc figures created by doc build
+prune docs/sphinx/source/savefig
+
+global-exclude .DS_Store
+global-exclude .ipynb_checkpoints/*
