--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,35 @@
-#include *.txt
+include MANIFEST.in
+include AUTHORS.md
+include LICENSE
+include README.md
+include setup.py
+
+# include most everything under pvlib by default
+# better to package too much than not enough
+graft pvlib
+
+# we included pvlib files needed to compile NREL SPA code in graft above,
+# now we exclude the NREL code itself to comply with their license
+global-exclude */spa.c
+global-exclude */spa.h
+prune pvlib/spa_c_files/build
+
+graft docs
+prune docs/sphinx/build
+prune docs/sphinx/source/generated
+# all doc figures created by doc build
+prune docs/sphinx/source/savefig
+
+global-exclude __pycache__
+global-exclude *.pyc
+global-exclude *.pyo
+global-exclude *.pyd
+global-exclude *.so
+global-exclude *~
+global-exclude .DS_Store
+global-exclude .git*
+global-exclude \#*
+global-exclude .ipynb_checkpoints
+
 include versioneer.py
 include pvlib/_version.py
-recursive-include pvlib/data *
-include README.md
-include pvlib/spa_c_files/*.h
-
-#recursive-include docs *.txt
