--- a/ci/requirements-py35.yml
+++ b/ci/requirements-py35.yml
@@ -16,6 +16,7 @@ dependencies:
     - pytest-cov
     - pytest-mock
     - nose
+    - pvfactors=0.1.5
     - pip:
         - coveralls
         - pytest-timeout
