--- a/.stickler.yml
+++ b/.stickler.yml
@@ -2,7 +2,7 @@ linters:
     flake8:
         python: 3
         max-line-length: 79
-        ignore: E201,E241
+        ignore: E201,E241,E226
 files:
     ignore:
         - 'pvlib/_version.py'
