--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,11 +6,22 @@
 trigger:
 - master
 
+strategy:
+  matrix:
+    linux:
+      imageName: 'ubuntu-16.04'
+    # mac:
+    #   imageName: 'macos-10.13'
+    windows:
+      imageName: 'vs2017-win2016'
+
+pool:
+  vmImage: $(imageName)
+
 jobs:
 
 - job: 'Test_conda'
-  pool:
-    vmImage: 'ubuntu-latest'
+
   strategy:
     matrix:
       Python27:
