--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,6 @@
 trigger:
 - master
 
-strategy:
-  matrix:
-    linux:
-      imageName: 'ubuntu-16.04'
-    # mac:
-    #   imageName: 'macos-10.13'
-    windows:
-      imageName: 'vs2017-win2016'
-
-pool:
-  vmImage: $(imageName)
 
 jobs:
 
@@ -26,12 +15,31 @@ jobs:
     matrix:
       Python27:
         python.version: '27'
+        imageName: 'ubuntu-16.04'
+      Python27-windows:
+        python.version: '27'
+        imageName: 'vs2017-win2016'
       Python35:
         python.version: '35'
+        imageName: 'ubuntu-16.04'
+      Python35-windows:
+        python.version: '35'
+        imageName: 'vs2017-win2016'
       Python36:
         python.version: '36'
+        imageName: 'ubuntu-16.04'
+      Python35-windows:
+        python.version: '36'
+        imageName: 'vs2017-win2016'
       Python37:
         python.version: '37'
+        imageName: 'ubuntu-16.04'
+      Python37-windows:
+        python.version: '37'
+        imageName: 'vs2017-win2016'
+
+  pool:
+    vmImage: $(imageName)
 
   steps:
   - bash: echo "##vso[task.prependpath]/usr/share/miniconda/bin"
