--- a/ci/requirements-py27.yml
+++ b/ci/requirements-py27.yml
@@ -16,6 +16,7 @@ dependencies:
     - pytest-cov
     - pytest-mock
     - nose
+    - shapely  # pvfactors dependency
     - pip:
         - coveralls
         - pytest-timeout
