--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
     displayName: 'List installed dependencies'
   - script: |
       source activate test_env
-      pytest pvlib --junitxml=junit/test-results.xml --napoleon-docstrings --cov --cov-report=xml --cov-report=html
+      pytest pvlib --junitxml=junit/test-results.xml --cov --cov-report=xml --cov-report=html
     displayName: 'pytest'
   # - script: |
   #     source activate test_env
@@ -93,7 +93,7 @@ jobs:
     displayName: 'List installed dependencies'
   - script: |
       call activate myEnvironment
-      pytest pvlib --junitxml=junit/test-results.xml --napoleon-docstrings
+      pytest pvlib --junitxml=junit/test-results.xml
     displayName: 'pytest'
   - task: PublishTestResults@2
     inputs:
