azure pipelines config (#715)
* windows?

* single matrix

* fix build name

* move windows into separate job. too many differences for one

* hardcode pool

* deps

* no flake8, pip install pytest-mock

* update conda

* explicit windows pip install pytest-mock

* limit coverage steps

* try brackets

* eq

* no napoleon

--- a/ci/requirements-py27.yml
+++ b/ci/requirements-py27.yml
@@ -14,9 +14,10 @@ dependencies:
     - siphon
     - pytest
     - pytest-cov
-    - pytest-mock
     - nose
+    - shapely  # pvfactors dependency
     - pip:
         - coveralls
+        - pytest-mock
         - pytest-timeout
         - pvfactors==0.1.5
