--- a/ci/requirements-py36.yml
+++ b/ci/requirements-py36.yml
@@ -20,4 +20,4 @@ dependencies:
         - coveralls
         - pytest-mock
         - pvfactors==0.1.5
-        - nrel-pysam==1.2.1
+        - NREL-PySAM==1.2.1
