Make requirements consistent for py34

--- a/ci/requirements-py34.yml
+++ b/ci/requirements-py34.yml
@@ -17,6 +17,7 @@ dependencies:
     - nose
     - pip:
         - coveralls
+        - pvfactors==1.0.1
+        - pyinterval
         - pytest-mock
         - pytest-timeout
-        - pyinterval
